--- a/client/package.json
+++ b/client/package.json
@@ -7,18 +7,19 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "vite": "^5.1.1",
+    "axios": "^1.6.7",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "redux": "^4.0.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "vite": "^5.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
